# lambda-framework

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
src/lambda_framework/: __init__.py  cache.py  dispatch.py  env_config.py  eventbridge.py  github.py  slack.py
src/lambda_framework/webhook/: __init__.py  fastapi.py  github.py
terraform/: .tool-versions  README.md
terraform/examples/complete/: README.md  main.tf
terraform/modules/lambda-function/: README.md  api_gateway.tf  eventbridge.tf  iam.tf  logging.tf  main.tf  outputs.tf  secrets.tf  sqs.tf  triggers.tf  variables.tf  versions.tf  vpc.tf
tests/: __init__.py  test_cache.py  test_cache_integration.py  test_cache_unit.py  test_dispatch.py  test_env_config.py  test_eventbridge.py  test_slack.py  test_webhook_fastapi.py  test_webhook_github.py
