[project]
name = "lambda-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Doni Crosby", email = "doni.crosby@dbtlabs.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aws-secretsmanager-caching>=1.1.3",
    "botocore>=1.42.23",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP",  "B", "S", "A", "D", "C90", "SIM"]
ignore = ["E501", "D203", "D213"]

